@@ -10,40 +10,52 @@ package service;
 import model.Book;
 import repository.BookFileRepository;
 
+import java.sql.SQLOutput;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.logging.Logger;
+import java.util.logging.Level;
 
 public class LibraryService {
     private static LibraryService instance;
     private List<Book> books = new ArrayList<>();
     private final BookFileRepository bookFileRepository = new BookFileRepository();
+    private static final Logger logger = Logger.getLogger(LibraryService.class.getName());
 
     private LibraryService() {
-        this.books = bookFileRepository.loadBook();
+        this.books = bookFileRepository.loadBooks();
     }
 
-    public static LibraryService getInstance() {
+    public static synchronized LibraryService getInstance() {
         if (instance == null) instance = new LibraryService();
         return instance;
     }
 
-    public void addBook(String title, String author) {
+    public boolean addBook(String title, String author) {
+        if (title == null || title.isBlank() || author == null || author.isBlank()) {
+            logger.warning("Book title or author cannot be empty");
+            return false;
+        }
+
+        if (books.stream().anyMatch(b -> b.getTitle().equalsIgnoreCase(title.trim())
+                && b.getAuthor().equalsIgnoreCase(author.trim()))) {
+            return false;
+        }
+
         int nextId = books.stream().mapToInt(Book::getId).max().orElse(0) + 1;
         books.add(new Book(nextId, title, author));
         bookFileRepository.saveBooks(books);
-    }
-
-    public void getBookInfo(int id) {
-        Book book = findBookByID(id);
-        System.out.println(book);
+        return true;
     }
 
     public void removeBook(int id) {
         Book book = findBookByID(id);
         if (book != null) {
             book.setDeleted(true);
-            System.out.println("Book marked as deleted.");
-        } else System.out.println("Book not found.");
+            bookFileRepository.saveBooks(books);
+            logger.info("Book marked as deleted.");
+        } else logger.warning("Book not found.");
     }
 
     public void updateBook(int id, String newTitle, String newAuthor) {
@@ -52,28 +64,26 @@ public class LibraryService {
             book.setTitle(newTitle);
             book.setAuthor(newAuthor);
             bookFileRepository.saveBooks(books);
-            System.out.println("Book updated successfully!");
-        } else System.out.println("Could not update a book. Book doesn't exist.");
+            logger.info("Book updated successfully!");
+        } else logger.warning("Could not update a book. Book doesn't exist.");
     }
 
-    public void updateTheTitleOfTheBook(int id, String newTitle) {
+    public void updateBookTitle(int id, String newTitle) {
         Book book = findBookByID(id);
         if (book != null) {
             book.setTitle(newTitle);
             bookFileRepository.saveBooks(books);
-            System.out.println("The title of a book updated successfully!");
-        }
-        else System.out.println("Could not update a book. Book doesn't exist.");
+            logger.info("The title of a book updated successfully!");
+        } else logger.warning("Could not update a book. Book doesn't exist.");
     }
 
-    public void updateTheAuthorOfTheBook(int id, String newAuthor) {
+    public void updateBookAuthor(int id, String newAuthor) {
         Book book = findBookByID(id);
         if (book != null) {
             book.setAuthor(newAuthor);
             bookFileRepository.saveBooks(books);
-            System.out.println("The author of a book updated successfully!");
-        }
-        else System.out.println("Could not update a book. Book doesn't exist.");
+            logger.info("The author of a book updated successfully!");
+        } else logger.warning("Could not update a book. Book doesn't exist.");
     }
 
     public Book findBookByID(int id) {
@@ -98,46 +108,42 @@ public class LibraryService {
         Book book = findBookByID(id);
         if (book != null && book.isAvailable()) {
             book.setAvailable(false);
-            getBookInfo(id);
             bookFileRepository.saveBooks(books);
-            System.out.println("Book borrowed successfullly!");
-        } else System.out.println("Book not found or already borrowed");
+            logger.info("Book borrowed successfully!");
+        } else logger.warning("Book not found or already borrowed");
     }
 
     public void borrowBookByTitle(String title) {
         Book book = findBookByTitle(title);
         if (book != null && book.isAvailable()) {
             book.setAvailable(false);
-            System.out.println(book);
             bookFileRepository.saveBooks(books);
-            System.out.println("Book borrowed successfullly!");
-        } else System.out.println("Book not found or already borrowed");
+            logger.info("Book borrowed successfully!");
+        } else logger.warning("Book not found or already borrowed");
     }
 
     public void returnBookByID(int id) {
         Book book = findBookByID(id);
         if (book != null && !book.isAvailable()) {
             book.setAvailable(true);
-            getBookInfo(id);
             bookFileRepository.saveBooks(books);
-            System.out.println("Book returned successfullly!");
-        } else System.out.println("Book not found or it wasn't borrowed.");
+            logger.info("Book returned successfully!");
+        } else logger.warning("Book not found or it wasn't borrowed.");
     }
 
     public void returnBookByTitle(String title) {
         Book book = findBookByTitle(title);
         if (book != null && !book.isAvailable()) {
             book.setAvailable(true);
-            System.out.println(book);
             bookFileRepository.saveBooks(books);
-            System.out.println("Book returned successfullly!");
-        } else System.out.println("Book not found or it wasn't borrowed.");
+            logger.info("Book returned successfully!");
+        } else logger.warning("Book not found or it wasn't borrowed.");
     }
 
     public List<Book> listBooks() {
         return books.stream()
                 .filter(book -> !book.isDeleted())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void shutdown() {
